# lib/app.js
@@ -35,7 +35,7 @@ var startServer = function startServer(callback) {
     }
 
     var options = {
-      appName: 'contests',
+      appName: 'lotteries',
       swagger: {
         enabled: true,
         apiDocsDir: __dirname + '/../public/'
@@ -87,18 +87,18 @@ var startServer = function startServer(callback) {
       get: [],
       post: [],
       put: [],
-      del: []
+      delete: []
     };
 
 
     routes.get.push({
       options: {
-        path: '/api/contests/:id/tickets', version: '1.0.0'
+        path: '/api/lotteries/:id/tickets', version: '1.0.0'
       },
       authMethod: function readTicketsAuthHandler(req, res, next) {
 
         oauth(req)
-          .scope('contests:tickets:get')
+          .scope('lotteries:tickets:get')
           .client('client')
           .user();
 
@@ -106,17 +106,17 @@ var startServer = function startServer(callback) {
       },
       cache: publicCacheHandler,
       precondition: noPreconditionHandler,
-      controllerMethod: ticketsController.getContestTicketsCollectionV1
+      controllerMethod: ticketsController.getLotteryTicketsCollectionV1
     });
 
     routes.post.push({
       options: {
-        path: '/api/contests/:id/tickets', version: '1.0.0'
+        path: '/api/lotteries/:id/tickets', version: '1.0.0'
       },
       authMethod: function createTicketsAuthHandler(req, res, next) {
 
         oauth(req)
-          .scope('contests:tickets:create')
+          .scope('lotteries:tickets:create')
           .client('client')
           .user();
 
@@ -124,7 +124,7 @@ var startServer = function startServer(callback) {
       },
       cache: noCacheHandler,
       precondition: noPreconditionHandler,
-      controllerMethod: ticketsController.createContestTicketV1
+      controllerMethod: ticketsController.createLotteryTicketV1
     });
 
     var server = myRestifyApi.createServer(routes, errorHandlers, options);
