# lib/controller/tickets.js
@@ -12,7 +12,7 @@ var keen = require('../keen');
 var receipts = require('../receipts');
 
 
-var getContestTicketsCollectionV1 = function getContestTicketsCollectionV1(req, res, next) {
+var getLotteryTicketsCollectionV1 = function getLotteryTicketsCollectionV1(req, res, next) {
   try {
     assert.object(req.params, 'params');
     assert.string(req.params.id, 'id');
@@ -30,7 +30,7 @@ var getContestTicketsCollectionV1 = function getContestTicketsCollectionV1(req, 
   var offset = req.params.offset;
   var sort = req.params.sort;
 
-  receipts.getContestTicketsCollection(id, limit, offset, sort, function (err, data) {
+  receipts.getLotteryTicketsCollection(id, limit, offset, sort, function (err, data) {
     if (err) {
       keen.errorEvent(req.authorization.bearer, {}, err);
     }
@@ -60,7 +60,7 @@ var getContestTicketsCollectionV1 = function getContestTicketsCollectionV1(req, 
   });
 };
 
-var createContestTicketV1 = function createContestTicketV1(req, res, next) {
+var createLotteryTicketV1 = function createLotteryTicketV1(req, res, next) {
   try {
     assert.object(req.params, 'params');
     assert.string(req.params.id, 'id');
@@ -74,9 +74,9 @@ var createContestTicketV1 = function createContestTicketV1(req, res, next) {
     assert.string(req.params.phone, 'phone');
     assert.string(req.params.trade, 'trade');
     assert.object(req.params.agreements, 'agreements');
-    assert.string(req.params.agreements.termsOfService, 'agreements.termsOfService');
-    assert.string(req.params.agreements.personalDataProcessing, 'agreements.personalDataProcessing');
-    assert.string(req.params.agreements.useMyEffigy, 'agreements.useMyEffigy');
+    assert.bool(req.params.agreements.termsOfService, 'agreements.termsOfService');
+    assert.bool(req.params.agreements.personalDataProcessing, 'agreements.personalDataProcessing');
+    assert.bool(req.params.agreements.useMyEffigy, 'agreements.useMyEffigy');
   }
   catch (e) {
     return next(new BadRequestError(e.message));
@@ -85,7 +85,7 @@ var createContestTicketV1 = function createContestTicketV1(req, res, next) {
   var id = req.params.id;
   var ticketRequest = req.params;
 
-  receipts.createContestTicket(id, ticketRequest, function (err, data) {
+  receipts.createLotteryTicket(id, ticketRequest, function (err, data) {
     if (err) {
       keen.errorEvent(req.authorization.bearer, {}, err);
     }
@@ -121,11 +121,11 @@ var createContestTicketV1 = function createContestTicketV1(req, res, next) {
     res.send(201, response);
     next();
 
-    return keen.createContestTicket(req.authorization.bearer, {}, data);
+    return keen.createLotteryTicket(req.authorization.bearer, {}, data);
   });
 };
 
 module.exports = {
-  getContestTicketsCollectionV1: getContestTicketsCollectionV1,
-  createContestTicketV1: createContestTicketV1
+  getLotteryTicketsCollectionV1: getLotteryTicketsCollectionV1,
+  createLotteryTicketV1: createLotteryTicketV1
 };
