# lib/receipts.js
@@ -1,18 +1,18 @@
 var meta = require('./meta');
 var logger = require('./logger/logger').logger;
 
-var getContestTicketsCollection = function getContestTicketsCollection(id, limit, offset, sort, callback) {
-  logger.args('getContestTicketsCollection: ', arguments);
+var getLotteryTicketsCollection = function getLotteryTicketsCollection(id, limit, offset, sort, callback) {
+  logger.args('getLotteryTicketsCollection: ', arguments);
   return callback(null, {});
 };
 
-var createContestTicket = function createContestTicket(id, ticketRequest, callback) {
-  logger.args('createContestTicket: ', arguments);
+var createLotteryTicket = function createLotteryTicket(id, ticketRequest, callback) {
+  logger.args('createLotteryTicket: ', arguments);
   return callback(null, {});
 };
 
 module.exports = {
-  getContestTicketsCollection: getContestTicketsCollection,
-  createContestTicket: createContestTicket,
+  getLotteryTicketsCollection: getLotteryTicketsCollection,
+  createLotteryTicket: createLotteryTicket,
   VERSION: meta.VERSION
 };
